# Anlise-Inteligente-de-Despesas-Pessoais

./: README.md  pyproject.toml
data/: despesas.xlsx
model/: model.pkl
notebooks/: analise-de-despesas.ipynb
powerbi/: analise inteligente de despesas.pbix  despesas_para_powerbi.csv
