[tool.poetry]
name = "analise-de-despesas"
version = "0.1.0"
description = ""
authors = ["Gabryel Januario <gabryeelcomy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.0"
matplotlib = "^3.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
