[tool.poetry]
name = "analise-de-despesas"
version = "0.1.0"
description = ""
authors = ["Gabryel Januario <gabryeelcomy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.0"
matplotlib = "^3.10.3"
openpyxl = "^3.1.5"
seaborn = "^0.13.2"
scikit-learn = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
